--- a/goedele/.env.example
+++ b/goedele/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:S0MeduLHLSYQ0h1wfsU+OaUngfF3IFeuEl7mORSsjxY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -9,11 +9,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=laravel_nasa
+DB_USERNAME='statik'
+DB_PASSWORD='veryveryverydifficultpassword'
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -57,3 +57,6 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+NASA_API_KEY="your_api_key_here"
+NASA_ADDRESS="https://api.nasa.gov/planetary/apod"
